--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontendmentor|Recipe Page</title>
   </head>
-  <body>
+  <body id="body-el">
+    <div class="toggle">
+      <button>Toggle Dark Mode</button>
+    </div>
     <main class="main-content">
       <header class="main-content__header">
         <div class="header-image-container">
