--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body id="body-el">
     <div class="toggle">
-      <button class="light-mode hidden"><i class="fa-regular fa-sun"></i></button>
-      <button class="dark-mode"><i class="fa-solid fa-moon"></i></button>
+      <button class="light-mode hidden" aria-label="Toggle light mode" ><i class="fa-regular fa-sun"></i></button>
+      <button class="dark-mode" aria-label="Toggle dark mode" ><i class="fa-solid fa-moon"></i></button>
     </div>
     <main class="main-content">
       <header class="main-content__header">
@@ -42,7 +42,7 @@
         </ul>
       </section>
       <section class="main_recipe--instructions">
-        <h2 class="instructiona__title">Instructions</h2>
+        <h2 class="instructions__title">Instructions</h2>
         <ol class="instructions__list">
           <li class="list-item--instructions">Beat the eggs: 
             <span class="instruction">In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
